final final FINAL

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link text-light" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-light" href="#how-it-works">Menu Plans</a></li>
                     <li class="nav-item"><a class="nav-link text-light" href="#how-it-works">How It Works</a></li>
                     <li class="nav-item"><a class="nav-link text-light" href="#healthy-eating">Our Recipes</a></li>
@@ -58,7 +59,7 @@
                 <p>Our easy-to-follow recipes mean you'll have a mouthwatering, home-cooked meal ready in under 30 minutes.</p>
             </div>
         </div>
-        <a href="#plans" class="btn btn-dark mt-4">Pick Your Plan</a>
+        <a href="#plans" class="btn btn-success mt-4">Pick Your Plan</a>
     </section>
 
     <section id="healthy-eating" class="container py-5">
@@ -77,8 +78,8 @@
         </div>
     </section>
 
-    <section id="testimonials" class="py-5 text-light" style="background-color: #1f3d2b;">
-        <div class="container">
+    <section id="testimonials" class="py-5 bg-primary text-light">
+      <div class="container">
             <h2 class="text-center mb-4">What Our Customers Are Saying</h2>
             <div class="row row-cols-1 row-cols-lg-3 g-4 text-center">
                 <div class="col">
